
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int wchar_t ;



wchar_t UniToUpper(wchar_t c)
{
 if (c >= L'a' && c <= L'z')
 {
  c -= L'a' - L'A';
 }

 return c;
}
